Discard download pending items and stop the load.

Omnibox should display the URL for the currently rendered
page (about:blank), not download URL. Also added StopLoading
call to hide the progress indicator.

Bug: 831334, 824148
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: I47eddd9ef7a46480383a60a1425f2c69513cf129
Reviewed-on: https://chromium-review.googlesource.com/1005893
Reviewed-by: Sylvain Defresne <sdefresne@chromium.org>
Commit-Queue: Eugene But <eugenebut@chromium.org>
Cr-Commit-Position: refs/heads/master@{#549916}
Former-commit-id: d3a6034a65b11598d1dfa714b88449dc36ba3641